updated content and images on realestatepurchase

--- a/src/assets/scss/pages/_access.scss
+++ b/src/assets/scss/pages/_access.scss
@@ -1,6 +1,7 @@
 .acc {
 	.c-banner {
 		padding: 0 0 80px 0;
+		background: linear-gradient(to left, #81b3d4, #5fa5cd);
 
 		// .c-ruf-txt {
 		// 	@include is-sp {
