--- a/src/assets/scss/object/project/_header.scss
+++ b/src/assets/scss/object/project/_header.scss
@@ -624,7 +624,8 @@
 		height: 660px;
 		width: 1100px;
 		position: relative;
-		background: linear-gradient(to right, #4a93d1, #81b3d4);
+		// background: linear-gradient(to right, #4a93d1, #81b3d4);
+		background: linear-gradient(to right, #003782, #81b3d4);
 		margin: 0 auto;
 		display: flex;
 		align-items: center;
