--- a/src/assets/scss/pages/_contact.scss
+++ b/src/assets/scss/pages/_contact.scss
@@ -92,7 +92,7 @@
 			}
 
 			&:nth-child(2) {
-				width: 60%;
+				width: 30%;
 				display: flex;
 				align-items: center;
 				justify-content: flex-start;
@@ -238,7 +238,7 @@
 
 				&:nth-child(2) {
 					flex-wrap: wrap;
-					width: 60%;
+					width: 60% !important;
 
 					@include is-sp {
 						width: 100% !important;
@@ -515,5 +515,9 @@
 
 	.width_100 {
 		width: 100% !important;
+	}
+
+	.cont_row1 {
+		background: #e2f3fb;
 	}
 }
