--- a/src/assets/scss/pages/_contact.scss
+++ b/src/assets/scss/pages/_contact.scss
@@ -92,7 +92,7 @@
 			}
 
 			&:nth-child(2) {
-				width: 30%;
+				width: 30% !important;
 				display: flex;
 				align-items: center;
 				justify-content: flex-start;
@@ -308,6 +308,7 @@
 							align-items: center;
 							justify-content: flex-start;
 							width: 100%;
+							margin-bottom: 10px;
 
 							label {
 								width: 120px;
@@ -531,5 +532,9 @@
 
 	.email {
 		width: 100% !important;
+	}
+
+	.text {
+		width: 100%;
 	}
 }
