update message background

--- a/src/assets/scss/object/project/_header.scss
+++ b/src/assets/scss/object/project/_header.scss
@@ -182,7 +182,7 @@
 .top-header {
 	padding-top: 100px;
 	overflow: hidden;
-	background: linear-gradient(to left, #81b3d4, #5fa5cd);
+	background: linear-gradient(to right, #2079bd, #1e91d2);
 
 	@include is-sp {
 		overflow: hidden;
