--- a/src/assets/scss/pages/_access.scss
+++ b/src/assets/scss/pages/_access.scss
@@ -1,7 +1,7 @@
 .acc {
 	.c-banner {
 		padding: 0 0 80px 0;
-		background: linear-gradient(to left, #81b3d4, #5fa5cd);
+		background: linear-gradient(to right, #2079bd, #1e91d2);
 
 		// .c-ruf-txt {
 		// 	@include is-sp {
@@ -40,11 +40,12 @@
 
 	position: relative;
 	&__section_1 {
-		background: linear-gradient(
-			90deg,
-			rgba(37, 121, 191, 1) 0%,
-			rgba(37, 147, 213, 1) 50%
-		);
+		// background: linear-gradient(
+		// 	90deg,
+		// 	rgba(37, 121, 191, 1) 0%,
+		// 	rgba(37, 147, 213, 1) 50%
+		// );
+		background: linear-gradient(to right, #003782, #0059b6);
 		clip-path: polygon(0 6%, 100% 0%, 100% 101%, 0% 100%);
 		margin-top: -100px;
 		padding-bottom: 101px;
@@ -105,9 +106,9 @@
 		width: 800px;
 		height: 250px;
 		clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-		background: linear-gradient(to left, #2593d5, #2579bf);
+		background: linear-gradient(to right, #003782, #0059b6);
 		position: absolute;
-		top: -4.5%;
+		top: -5%;
 		right: 0%;
 
 		@include is-sp {
