--- a/src/assets/scss/object/component/_banner.scss
+++ b/src/assets/scss/object/component/_banner.scss
@@ -31,39 +31,54 @@
 				}
 			}
 		}
- }
+	 }
 
- .c-ruf-txt{
-	 display: none;
+ 	.c-ruf-txt{
+		display: none;
 
-	 @include is-sp{
-		max-width: 1100px;
-		width: 92%;
-		display: block;
-		position: relative;
-		z-index: 150;
-		color: #fff;
-		font-family:cross-platform-yu-gothic;
-		padding: 0 0 30px 35px;
-		margin: 0 auto;
-		text-align: left;
+		@include is-sp{
+			max-width: 1100px;
+			width: 92%;
+			display: block;
+			position: relative;
+			z-index: 150;
+			color: #fff;
+			font-family:cross-platform-yu-gothic;
+			margin: 0 auto;
+			text-align: left;
+			padding: 34px 0 30px 35px;
+			@include font-line(14.5, 17.5);
+			letter-spacing: 0.24em;
+			font-weight: 700;
+		}
 
+		@include is-max(375px) {
+			white-space: nowrap;
+			padding: 34px 0 30px 30px;
+			font-size: 3.8vw;
+		}
 		img{
 			width: 131px;
 			margin-right: 20px;
+			@include is-sp {
+				margin-right: 12.5px;
+			}
+			@include is-max(500px) {
+				width: 65.5px;
+			}
 		}
-	 }
+	
 
-	 @include is-max(400px){
-		font-size: 4vw;
-	 }
+			//  @include is-max(400px){
+			// 	font-size: 4vw;
+			//  }
 
-	 img{
-		 @include is-max(400px){
-			 width: 35%;
-		 }
-	 }
- }
+			//  img{
+			// 	 @include is-max(400px){
+			// 		 width: 35%;
+			// 	 }
+			//  }
+ 	}
 
 	.c-inner{
 		max-width: 1100px;
