--- a/src/assets/scss/object/project/_header.scss
+++ b/src/assets/scss/object/project/_header.scss
@@ -180,7 +180,7 @@
 // header
 
 .top-header {
-	padding-top: 100px;
+	padding-top: 115px;
 	overflow: hidden;
 	background: linear-gradient(to right, #2079bd, #1e91d2);
 
@@ -198,7 +198,7 @@
 		z-index: 999;
 		transform: translateX(-100%);
 		transition: 0.3s ease-in-out;
-		background: linear-gradient(to top, #2593d5, #2579bf, #2593d5);
+		background: linear-gradient(to right, #003782, #0059b6);
 	}
 
 	.logo {
