--- a/src/assets/scss/pages/_access.scss
+++ b/src/assets/scss/pages/_access.scss
@@ -3,6 +3,10 @@
 		padding: 0 0 80px 0;
 		background: linear-gradient(to right, #2079bd, #1e91d2);
 
+		@include is-max(400px){
+            padding: 0 0 95px 0;
+        }
+
 		// .c-ruf-txt {
 		// 	@include is-sp {
 		// 		padding: 35px 0 20px 35px;
@@ -13,29 +17,29 @@
 		// 	}
 		// }
 
-		.c-ruf-txt {
-			@include is-sp {
-				padding: 34px 0 30px 35px;
-				@include font-line(14.5, 17.5);
-				letter-spacing: 0.24em;
-				font-weight: 700;
-			}
-			@include is-max(375px) {
-				white-space: nowrap;
-				padding: 34px 0 30px 30px;
-			}
-			@include is-max(373px) {
-				font-size: 3.8vw;
-			}
-			img {
-				@include is-sp {
-					margin-right: 12.5px;
-				}
-				@include is-max(500px) {
-					width: 65.5px;
-				}
-			}
-		}
+		// .c-ruf-txt {
+		// 	@include is-sp {
+		// 		padding: 34px 0 30px 35px;
+		// 		@include font-line(14.5, 17.5);
+		// 		letter-spacing: 0.24em;
+		// 		font-weight: 700;
+		// 	}
+		// 	@include is-max(375px) {
+		// 		white-space: nowrap;
+		// 		padding: 34px 0 30px 30px;
+		// 	}
+		// 	@include is-max(373px) {
+		// 		font-size: 3.8vw;
+		// 	}
+		// 	img {
+		// 		@include is-sp {
+		// 			margin-right: 12.5px;
+		// 		}
+		// 		@include is-max(500px) {
+		// 			width: 65.5px;
+		// 		}
+		// 	}
+		// }
 	}
 
 	position: relative;
@@ -108,13 +112,14 @@
 		clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 		background: linear-gradient(to right, #003782, #0059b6);
 		position: absolute;
-		top: -5%;
+		top: 0;
 		right: 0%;
+		margin-top: -115px;
 
 		@include is-sp {
-			width: 83%;
-			height: 161px;
-			top: -30px;
+			width: 77%;
+			height: 322px;
+			top: 0;
 		}
 	}
 
