--- a/src/assets/scss/pages/_interview.scss
+++ b/src/assets/scss/pages/_interview.scss
@@ -3,11 +3,15 @@
     position: relative;
 
     .c-banner {
-        padding: 0 0 40px 0;
+        padding: 0 0 80px 0;
         background: linear-gradient(to right, #2079bd, #1e91d2);
 
         @include is-sp {
             padding: 0 0 70px 0;
+        }
+
+        @include is-max(400px){
+            padding: 0 0 95px 0;
         }
 
         &--ttl {
@@ -50,6 +54,31 @@
                 }
             }
         }
+
+        // .c-ruf-txt {
+        //     @include is-sp {
+        //         padding: 34px 0 30px 35px;
+        //         @include font-line(14.5, 17.5);
+        //         letter-spacing: 0.24em;
+        //         font-weight: 700;
+        //     }
+        //     @include is-max(375px) {
+        //         white-space: nowrap;
+        //         padding: 34px 0 30px 30px;
+        //     }
+        //     @include is-max(373px) {
+        //         font-size: 3.8vw;
+        //     }
+        //     img {
+        //         @include is-sp {
+        //             margin-right: 12.5px;
+        //         }
+        //         @include is-max(500px) {
+        //             width: 65.5px;
+        //         }
+        //     }
+        // }
+
     }
 }
 
@@ -74,22 +103,23 @@
     }
 }
 
-// clip top
-.top-clip {
-    width: 800px;
-    height: 250px;
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-    background: linear-gradient(to right, #003782, #0059b6);
-    position: absolute;
-    top: -4.5%;
-    right: 0%;
+	// clip top
+	.top-clip {
+		width: 800px;
+		height: 250px;
+		clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+		background: linear-gradient(to right, #003782, #0059b6);
+		position: absolute;
+		top: 0;
+		right: 0%;
+        margin-top: -115px;
 
-    @include is-sp {
-        width: 83%;
-        height: 161px;
-        top: -30px;
-    }
-}
+		@include is-sp {
+			width: 77%;
+			height: 322px;
+			top: 0;
+		}
+	}
 
 .section_1 {
     color: #fff;
@@ -101,13 +131,13 @@
         margin-top: -145px;
         padding-top: 195px;
 
-        clip-path: polygon(200% 0, 100% 100%, 86% 96%, 0 100%, 0 10%);
+        clip-path: polygon(200% 0, 100% 100%, 86% 96%, 0 100%, 0 9%);
 
         background: linear-gradient(to right, #003782, #0059b6);
 
         @include is-sp {
             margin-top: -90px;
-            clip-path: polygon(100% 1%, 100% 100%, 86% 98.2%, 0% 100%, 0 4%);
+            clip-path: polygon(100% 0, 100% 100%, 86% 98.2%, 0% 100%, 0 2%);
             padding-top: 160.5px;
         }
         @include is-max(376px) {
