--- a/src/assets/scss/pages/_ourenterprises.scss
+++ b/src/assets/scss/pages/_ourenterprises.scss
@@ -1,7 +1,12 @@
 .oe {
+	position: relative;
 	.c-banner {
 		padding: 0 0 80px 0;
 		background: linear-gradient(to right, #2079bd, #1e91d2);
+
+		@include is-max(400px){
+            padding: 0 0 95px 0;
+        }
 
 		&--ttl {
 			p {
@@ -46,7 +51,7 @@
 	&__section_1 {
 		background: linear-gradient(to right, #003782, #0059b6);
 		clip-path: polygon(0 3.8%, 100% 1%, 100% 101%, 0% 100%);
-		margin-top: -100px;
+		margin-top: -110px;
 		// padding-bottom: 101px;
 		padding-top: 162px;
 		// padding-bottom: 100px;
@@ -100,17 +105,18 @@
 	// clip top
 	.top-clip {
 		width: 800px;
-		height: 277px;
+		height: 250px;
 		clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 		background: linear-gradient(to right, #003782, #0059b6);
 		position: absolute;
-		top: -4.5%;
+		top: 0;
 		right: 0%;
+        margin-top: -115px;
 
 		@include is-sp {
-			width: 83%;
-			height: 161px;
-			top: -30px;
+			width: 77%;
+			height: 322px;
+			top: 0;
 		}
 	}
 
