--- a/src/assets/scss/pages/_top-page.scss
+++ b/src/assets/scss/pages/_top-page.scss
@@ -7,8 +7,8 @@
 		// background: rgb(95, 165, 205);
 		background: linear-gradient(to right, #2079bd, #1e91d2);
 		position: relative;
-		padding-top: 115px;
-		margin-top: -100px;
+		padding-top: 100px;
+		margin-top: -115px;
 		overflow: hidden;
 
 		// clip top
@@ -17,6 +17,7 @@
 			position: absolute;
 			top: 0;
 			right: 0;
+			width: 77%;
 			height: 250px;
 			max-width: 1200px;
 			margin: 0 auto;
@@ -30,8 +31,7 @@
 				background: linear-gradient(to right, #003782, #0059b6);
 
 				@include is-sp {
-					width: 278px;
-					height: 161px;
+					height: 322px;
 				}
 			}
 		}
