--- a/src/assets/scss/pages/_managementphilosophy.scss
+++ b/src/assets/scss/pages/_managementphilosophy.scss
@@ -3,6 +3,11 @@
 	.c-banner {
 		background: linear-gradient(to right, #2079bd, #1e91d2);
 		padding: 0 0 65px 0;
+
+		@include is-max(400px){
+            padding: 0 0 95px 0;
+        }
+
 		&--ttl {
 			@include is-sp {
 				padding: 20px 13px 20px 30px;
@@ -66,29 +71,29 @@
 			}
 		}
 
-		.c-ruf-txt {
-			@include is-sp {
-				padding: 34px 0 30px 35px;
-				@include font-line(14.5, 17.5);
-				letter-spacing: 0.24em;
-				font-weight: 700;
-			}
-			@include is-max(375px) {
-				white-space: nowrap;
-				padding: 34px 0 30px 30px;
-			}
-			@include is-max(373px) {
-				font-size: 3.8vw;
-			}
-			img {
-				@include is-sp {
-					margin-right: 12.5px;
-				}
-				@include is-max(500px) {
-					width: 65.5px;
-				}
-			}
-		}
+		// .c-ruf-txt {
+		// 	@include is-sp {
+		// 		padding: 34px 0 30px 35px;
+		// 		@include font-line(14.5, 17.5);
+		// 		letter-spacing: 0.24em;
+		// 		font-weight: 700;
+		// 	}
+		// 	@include is-max(375px) {
+		// 		white-space: nowrap;
+		// 		padding: 34px 0 30px 30px;
+		// 	}
+		// 	@include is-max(373px) {
+		// 		font-size: 3.8vw;
+		// 	}
+		// 	img {
+		// 		@include is-sp {
+		// 			margin-right: 12.5px;
+		// 		}
+		// 		@include is-max(500px) {
+		// 			width: 65.5px;
+		// 		}
+		// 	}
+		// }
 	}
 
 	.bread_crumps {
@@ -123,12 +128,12 @@
 		position: absolute;
 		top: 0;
 		right: 0%;
-		margin-top: -100px;
+		margin-top: -115px;
 
 		@include is-sp {
-			width: 83%;
-			height: 161px;
-			top: -30px;
+			width: 77%;
+			height: 322px;
+			top: 0;
 		}
 	}
 
