--- a/src/assets/scss/object/component/_button.scss
+++ b/src/assets/scss/object/component/_button.scss
@@ -367,6 +367,12 @@
     z-index: 777;
 	color: #258acf;
 	letter-spacing: 0.2em;
+
+	&:hover{
+		background-color: red;
+		transition: background-color 0.5s ease-out;
+	}
+
     @include is-sp {
         width: 100%;
 		letter-spacing: 0.13em;
