--- a/src/assets/scss/pages/_contact.scss
+++ b/src/assets/scss/pages/_contact.scss
@@ -9,6 +9,15 @@
 		padding: 100px 0 20px 0;
 	}
 
+	.text {
+		&:nth-of-type(10) {
+			width: unset;
+		}
+		&:nth-of-type(11) {
+			width: unset;
+		}
+	}
+
 	&__bg-white {
 		background-color: #fff;
 		margin: 11px 0 0 0;
@@ -505,16 +514,9 @@
 		}
 	}
 
-	br {
-		&:last-child {
-			display: none;
-		}
-	}
-
 	.wpcf7-form-control-wrap {
 		text-align: left;
 		display: block;
-		width: 100%;
 	}
 
 	.width_100 {
@@ -526,15 +528,11 @@
 	}
 
 	.ex1 {
-		width: unset;
+		width: unset !important;
 	}
 
 	.email {
 		width: 100% !important;
-	}
-
-	.text {
-		width: 100%;
 	}
 
 	.w_60 {
