--- a/src/assets/scss/object/component/_button.scss
+++ b/src/assets/scss/object/component/_button.scss
@@ -378,7 +378,7 @@
     }
     .txt {
         text-align: center;
-        font-family: cross-platform-yu-gothic;
+        font-family: cross-platform-yu-gothic, sans-serif;
         font-weight: 700;
         padding: 20px 0;
         line-height: 1;
@@ -451,7 +451,7 @@
 
 	.txt {
 		text-align: center;
-		font-family: cross-platform-yu-gothic;
+		font-family: cross-platform-yu-gothic, sans-serif;
 		font-weight: 700;
 		padding: 20px 0;
 		line-height: 1;
@@ -484,7 +484,7 @@
 
 	.txt {
 		text-align: center;
-		font-family: cross-platform-yu-gothic;
+		font-family: cross-platform-yu-gothic, sans-serif;
 		font-weight: 700;
 		padding: 20px 0;
 		line-height: 1;
