--- a/src/assets/scss/object/component/_case.scss
+++ b/src/assets/scss/object/component/_case.scss
@@ -16,7 +16,7 @@
 
 		&__sub {
 			color: $color-text03;
-			font-family: cross-platform-yu-gothic;
+			font-family: cross-platform-yu-gothic, sans-serif;
 			font-weight: 500;
 			letter-spacing: 0.2em;
 			line-height: 1;
@@ -30,7 +30,7 @@
 		}
 		&__sub2 {
 			color: $color-text03;
-			font-family: cross-platform-yu-gothic;
+			font-family: cross-platform-yu-gothic, sans-serif;
 			font-weight: 500;
 			letter-spacing: 0.07em;
 			line-height: 1;
@@ -186,7 +186,7 @@
 
 						&__sub {
 							color: $color-text03;
-							font-family: cross-platform-yu-gothic;
+							font-family: cross-platform-yu-gothic, sans-serif;
 							font-weight: 700;
 							padding-bottom: 10px;
 
@@ -228,7 +228,7 @@
 
 						&__sub {
 							color: $color-text03;
-							font-family: cross-platform-yu-gothic;
+							font-family: cross-platform-yu-gothic, sans-serif;
 							font-weight: 700;
 							padding-bottom: 10px;
 
@@ -257,7 +257,7 @@
 					color: $color-text03;
 
 					&.ttl {
-						font-family: cross-platform-yu-gothic;
+						font-family: cross-platform-yu-gothic, sans-serif;
 						font-weight: 500;
 						letter-spacing: .2em;
 
@@ -291,7 +291,7 @@
 					}
 
 					&.desc {
-						font-family: cross-platform-yu-gothic;
+						font-family: cross-platform-yu-gothic, sans-serif;
 						font-weight: 500;
 						letter-spacing:0.07em;
 						text-align: justify;
@@ -342,7 +342,7 @@
 
 			&__sub {
 				color: $color-text01;
-				font-family: cross-platform-yu-gothic;
+				font-family: cross-platform-yu-gothic, sans-serif;
 				font-weight: 700;
 				line-height: 1;
 				padding: 20px 0 30px 0;
@@ -352,7 +352,7 @@
 
 			&__desc {
 				color: $color-text-default;
-				font-family: cross-platform-yu-gothic;
+				font-family: cross-platform-yu-gothic, sans-serif;
 				font-weight: 500;
 
 				@include font-line(13);
@@ -398,7 +398,7 @@
 
 			&__desc {
 				color: $color-text-default;
-				font-family: cross-platform-yu-gothic;
+				font-family: cross-platform-yu-gothic, sans-serif;
 				font-weight: 500;
 				text-align: justify;
 
