--- a/src/assets/scss/object/component/_slider.scss
+++ b/src/assets/scss/object/component/_slider.scss
@@ -198,7 +198,7 @@
 
 				p {
 					color: $color-text03;
-					font-family: cross-platform-yu-gothic;
+					font-family: cross-platform-yu-gothic, sans-serif;
 
 					&:nth-of-type(1) {
 						font-weight: 500;
@@ -212,7 +212,7 @@
 		}
 		&--ttl {
 			text-align: center;
-			font-family: cross-platform-yu-gothic;
+			font-family: cross-platform-yu-gothic, sans-serif;
 			font-weight: 700;
 			line-height: 1;
 			padding: 20px 0;
@@ -232,7 +232,7 @@
 		&--sub {
 			color: $color-text-default;
 			text-align: justify;
-			font-family: cross-platform-yu-gothic;
+			font-family: cross-platform-yu-gothic, sans-serif;
 			font-weight: 500;
 			@include font-line(11);
 			line-height: 16.5px;
