--- a/src/assets/scss/pages/_companyinformation.scss
+++ b/src/assets/scss/pages/_companyinformation.scss
@@ -1,29 +1,30 @@
 .ci {
-	.c-banner{
-		position: relative;
-		padding: 0 0 100px 0;
-		&--ttl{
-			p{
-				&:nth-child(1){
-					@include is-max(1000px){
-					font-size: 3vw;
+	position: relative;
+	.c-banner {
+		background: linear-gradient(to right, #2079bd, #1e91d2);
+		padding: 0 0 80px 0;
+		&--ttl {
+			p {
+				&:nth-child(1) {
+					@include is-max(1000px) {
+						font-size: 3vw;
 					}
-					@include is-sp{
+					@include is-sp {
 						font-size: 25px;
 					}
-					@include is-max(400px){
+					@include is-max(400px) {
 						font-size: 7vw;
 					}
 				}
-				&:nth-child(2){
+				&:nth-child(2) {
 					line-height: 2;
-					@include is-max(1000px){
+					@include is-max(1000px) {
 						font-size: 1.3vw;
 					}
-					@include is-sp{
+					@include is-sp {
 						font-size: 12px;
 					}
-					@include is-max(400px){
+					@include is-max(400px) {
 						font-size: 3vw;
 					}
 				}
@@ -32,31 +33,34 @@
 	}
 
 	&__section_1 {
+		background: linear-gradient(to right, #003782, #0059b6);
+		padding: 115px 0 100px 0;
+		margin-top: -100px;
+		clip-path: polygon(0 3.05%, 100% 0, 100% 100%, 0% 100%);
 
-		.clip-path{
-			background: linear-gradient(90deg, #2579bf 0%, #2593d5 50%);
-			clip-path: polygon(0 4%, 100% 0, 100% 100%, 0% 100%);
-			padding: 100px 0 100px 0;
-			text-align: center;
-			margin-top: -135px;
-			padding-bottom: 101px;
+		// .clip-path {
+		// 	background: linear-gradient(90deg, #2579bf 0%, #2593d5 50%);
+		// 	clip-path: polygon(0 4%, 100% 0, 100% 100%, 0% 100%);
+		// 	padding: 100px 0 100px 0;
+		// 	text-align: center;
+		// 	margin-top: -135px;
+		// 	padding-bottom: 101px;
 
-			@include is-sp{
-				clip-path: polygon(0 4%, 100% 2%, 100% 100%, 0% 100%);
-			}
+		// 	@include is-sp {
+		// 		clip-path: polygon(0 4%, 100% 2%, 100% 100%, 0% 100%);
+		// 	}
 
-			@include is-max(400px){
-				clip-path: polygon(0 3%, 100% 2%, 100% 100%, 0% 100%);
-				margin-top: -145px;
-			}
-		}
-	
+		// 	@include is-max(400px) {
+		// 		clip-path: polygon(0 3%, 100% 2%, 100% 100%, 0% 100%);
+		// 		margin-top: -145px;
+		// 	}
+		// }
+
 		// background: linear-gradient(
 		// 	90deg,
 		// 	rgba(37, 121, 191, 1) 0%,
 		// 	rgba(37, 147, 213, 1) 50%
 		// );
-		
 
 		@include is-sp {
 			padding-bottom: 101px;
@@ -393,9 +397,9 @@
 	// bg-img
 	&__bg_1 {
 		position: absolute;
-		top: -89px;
-		right: 103px;
-		width: 316px;
+		top: -100px;
+		right: 89px;
+		width: 352px;
 
 		@include is-sp {
 			right: 10px;
