--- a/src/assets/scss/pages/_companyinformation.scss
+++ b/src/assets/scss/pages/_companyinformation.scss
@@ -1,8 +1,14 @@
 .ci {
 	position: relative;
 	.c-banner {
+
 		background: linear-gradient(to right, #2079bd, #1e91d2);
 		padding: 0 0 80px 0;
+
+		@include is-max(400px) {
+			padding-bottom: 95px;
+
+		}
 		&--ttl {
 			p {
 				&:nth-child(1) {
@@ -36,35 +42,27 @@
 		background: linear-gradient(to right, #003782, #0059b6);
 		padding: 115px 0 100px 0;
 		margin-top: -100px;
-		clip-path: polygon(0 3.05%, 100% 0, 100% 100%, 0% 100%);
+		clip-path: polygon(0 50px, 100% 0, 100% 100%, 0% 100%);
 
-		// .clip-path {
-		// 	background: linear-gradient(90deg, #2579bf 0%, #2593d5 50%);
-		// 	clip-path: polygon(0 4%, 100% 0, 100% 100%, 0% 100%);
-		// 	padding: 100px 0 100px 0;
-		// 	text-align: center;
-		// 	margin-top: -135px;
-		// 	padding-bottom: 101px;
+		.clip-path {
+			padding: 100px 0 100px 0;
+			text-align: center;
+			margin-top: -135px;
+			padding-bottom: 101px;
 
-		// 	@include is-sp {
-		// 		clip-path: polygon(0 4%, 100% 2%, 100% 100%, 0% 100%);
-		// 	}
+			// @include is-sp {
+			// 	clip-path: polygon(0 4%, 100% 2%, 100% 100%, 0% 100%);
+			// }
 
-		// 	@include is-max(400px) {
-		// 		clip-path: polygon(0 3%, 100% 2%, 100% 100%, 0% 100%);
-		// 		margin-top: -145px;
-		// 	}
-		// }
-
-		// background: linear-gradient(
-		// 	90deg,
-		// 	rgba(37, 121, 191, 1) 0%,
-		// 	rgba(37, 147, 213, 1) 50%
-		// );
+			// @include is-max(400px) {
+			// 	clip-path: polygon(0 3%, 100% 2%, 100% 100%, 0% 100%);
+			// 	margin-top: -145px;
+			// }
+		}
 
 		@include is-sp {
 			padding-bottom: 101px;
-			clip-path: polygon(0 2.5%, 100% 1%, 100% 101%, 0% 100%);
+			clip-path: polygon(0 43px, 100% 12px, 100% 101%, 0% 100%);
 		}
 
 		.l-wrap {
@@ -120,7 +118,7 @@
 
 	&__sub {
 		color: $color-text03;
-		font-family: cross-platform-yu-gothic;
+		font-family: cross-platform-yu-gothic, sans-serif;
 		font-weight: 500;
 		letter-spacing: 0.2em;
 		line-height: 1;
@@ -194,7 +192,7 @@
 						p {
 							@include font-line(13);
 							letter-spacing: 0.42em;
-							font-family: cross-platform-yu-gothic;
+							font-family: cross-platform-yu-gothic, sans-serif;
 							font-weight: 700;
 							width: 184px;
 							line-height: 24px;
@@ -256,7 +254,7 @@
 							p {
 								@include font-line(13);
 								letter-spacing: 0.12em;
-								font-family: cross-platform-yu-gothic;
+								font-family: cross-platform-yu-gothic, sans-serif;
 								font-weight: 500;
 								line-height: 24px;
 								text-align: left;
