--- a/src/assets/scss/pages/_result.scss
+++ b/src/assets/scss/pages/_result.scss
@@ -58,7 +58,6 @@
 	.section_1 {
 		background: linear-gradient(to right, #003782, #0059b6);
 		clip-path: polygon(0 50px, 100% 0, 100% 100%, 0% 100%);
-		padding-top: 162px;
 		margin-top: -100px;
 
 		@include is-sp {
@@ -68,15 +67,13 @@
 		}
 
 		.clip-path {
-			// background: linear-gradient(to right, #003782, #0059b6);
-			// clip-path: polygon(0 4.3%, 100% 1%, 100% 100%, 0% 100%);
 			padding: 160px 0 100px 0;
 			text-align: center;
-			// margin-top: -135px;
 
-			// @include is-max(500px) {
-			// 	clip-path: polygon(0 4%, 100% 1.6%, 100% 101%, 0% 100%);
-			// }
+			@include is-sp {
+				padding: 15px 0 0 0;
+			}
+			
 		}
 
 		.l-wrap {
@@ -163,6 +160,15 @@
 	.result_ttl {
 		letter-spacing: 0.18em;
 		font-weight: 500;
+
+		@include is-max(985px) {
+			@include font-line(28);
+		}
+
+		@include is-max(970px) {
+			@include font-line(30);
+		}
+
 		@include is-sp {
 			@include font-line(25);
 			letter-spacing: 0.01em;
