--- a/src/assets/scss/object/component/_case.scss
+++ b/src/assets/scss/object/component/_case.scss
@@ -365,26 +365,35 @@
 			padding-left: 20px;
 			border-left: 3px solid #258acf;
 
+			@include is-sp {
+				padding-left: 10px !important;
+			}
+
 			&__ttl {
 				color: $color-text04;
 				font-family: century-gothic, sans-serif;
-				font-weight: 700;
+				font-weight: 400 !important;
+				letter-spacing: 0.32em;
 				line-height: 1;
-
 				@include font-line(10);
+
+				@include is-sp {
+					font-size: 12.5px !important;
+					letter-spacing: 0.21em !important;
+				}
 			}
 
 			&__sub {
 				color: $color-text01;
 				font-family: yu-mincho-pr6n, sans-serif;
-				font-weight: 700;
+				font-weight: 500 !important;
 				padding: 15px 0 25px 0;
 				letter-spacing: 0.45rem;
 
 				@include font-line(26);
 
 				@include is-sp {
-					letter-spacing: unset;
+					letter-spacing: 0.15em !important;
 				}
 
 				br {
@@ -401,6 +410,11 @@
 				font-family: cross-platform-yu-gothic, sans-serif;
 				font-weight: 500;
 				text-align: justify;
+				letter-spacing: 0.2em;
+
+				@include is-sp {
+					letter-spacing: 0.1em !important
+				}
 
 				@include font-line(13);
 			}
