--- a/src/assets/scss/object/component/_slider.scss
+++ b/src/assets/scss/object/component/_slider.scss
@@ -29,8 +29,16 @@
 			top: 26%;
 		}
 
+		@include is-max(377px) {
+			top: 21.5%;
+		}
+
 		@include is-max(350px) {
 			top: 21%;
+		}
+
+		@include is-max(322px) {
+			top: 18.5%;
 		}
 	}
 
@@ -57,8 +65,16 @@
 			top: 26%;
 		}
 
+		@include is-max(377px) {
+			top: 21.5%;
+		}
+
 		@include is-max(350px) {
 			top: 21%;
+		}
+
+		@include is-max(322px) {
+			top: 18.5%;
 		}
 	}
 	&__item {
