--- a/src/assets/scss/pages/_case.scss
+++ b/src/assets/scss/pages/_case.scss
@@ -1,44 +1,58 @@
-.case { 
-		.c-banner{
-			&--ttl{
-				@include is-sp{
-					background: linear-gradient(
-					90deg,
-					rgba(37, 121, 191, 1) 0%,
-					rgba(37, 147, 213, 1) 50%
-					);
-					padding: 20px 13px 20px 30px;
-					left: 0;
+.case {
+	position: relative;
+	.c-banner {
+		background: linear-gradient(to right, #2079bd, #1e91d2) !important;
+		padding: 0 0 80px 0;
 
-					&.r-b{
-					background: none;
-				}
-				}
+		@include is-max(400px) {
+			padding-bottom: 95px;
+		}
 
-				@include is-max(500px){
-					top: 25%;
+		&--ttl {
+			.br-sp {
+				display: none;
+				@include is-sp {
+					display: block;
+				}
 			}
 
-			p{
-				line-height: 1.4em;
-				.br-sp{
-					display: none;
-					@include is-sp{
-						display: block;
+			p {
+				&:nth-child(1) {
+					line-height: 1.45em;
+					@include is-max(500px) {
+						font-size: 6vw;
 					}
 				}
-			  
-			  &:nth-child(1){
-				  @include is-max(500px){
-				  font-size: 6vw;
-			    }
-			  }
-			  &:nth-child(2){
-				@include is-max(500px){
-				font-size: 3vw;
-			    }
-			  }
-			}	
+				&:nth-child(2) {
+					font-weight: 700;
+					@include is-max(500px) {
+						font-size: 3vw;
+					}
+				}
+			}
+		}
+	}
+
+	.bread_crumps {
+		text-align: left;
+		position: relative;
+		z-index: 150;
+		padding-top: 12px;
+		.txt {
+			width: 90%;
+			margin: 0 auto;
+			max-width: 1100px;
+			color: #fff;
+			font-family: cross-platform-yu-gothic, sans-serif;
+			@include font-line(11);
+
+			@include is-sp {
+				@include font-line(12.5);
+			}
+		}
+
+		span {
+			padding: 0 8px;
 		}
 	}
 
@@ -55,21 +69,25 @@
 		}
 	}
 	.clip-top {
-		-webkit-clip-path: polygon(100% 0%, 0 0, 0% 100%);
-		clip-path: polygon(100% 0%, 0 0, 0% 100%);
+		// -webkit-clip-path: polygon(100% 0%, 0 0, 0% 100%);
+		// clip-path: polygon(100% 0%, 0 0, 0% 100%);
 		padding: 55px 0 0 0;
-		background: rgb(95, 165, 205);
+		// background: rgb(95, 165, 205);
 		text-align: center;
 		margin-bottom: 90px;
 		margin-top: -25px;
 	}
 	.section_1 {
-		background: linear-gradient(
-			90deg,
-			rgba(37, 121, 191, 1) 0%,
-			rgba(37, 147, 213, 1) 50%
-		);
+		background: linear-gradient(to right, #003782, #0059b6);
+		clip-path: polygon(0 50px, 100% 0, 100% 96%, 0% 100%);
+		margin-top: -100px;
 		text-align: center;
+
+		@include is-sp {
+			clip-path: polygon(0 43px, 100% 12px, 100% 101%, 0% 100%);
+			padding: 115px 0 76.5px 0;
+			margin-top: -100px;
+		}
 
 		.clip-bottom {
 			-webkit-clip-path: polygon(100% 0%, 100% 100%, 0% 100%);
@@ -94,7 +112,7 @@
 				@include is-sp {
 					width: 46.67%;
 					top: -100px;
-					right: 0;
+					right: 14px;
 				}
 			}
 		}
@@ -104,29 +122,24 @@
 			font-weight: 400;
 			font-family: century-gothic, sans-serif;
 			text-align: center;
-			letter-spacing: .32em;
+			letter-spacing: 0.32em;
 
-			@include font-line(10,20);
+			@include font-line(10, 20);
 		}
 
-		.c-clipbg__CS{
+		.c-clipbg__CS {
 			padding-bottom: 60px;
 		}
 
-		.c-case--items{
-			
+		.c-case--items {
 			&:nth-of-type(odd) {
-			background-color: #fff;
-			position: relative;
-			padding: 40px 0;
-			-webkit-clip-path: polygon(0 15%, 100% 0, 100% 85%, 0% 100%);
-			clip-path: polygon(0 -1%, 100% 0, 100% 100%, 0% 100%);
-
-		
+				background-color: #fff;
+				position: relative;
+				padding: 40px 0;
+				-webkit-clip-path: polygon(0 15%, 100% 0, 100% 85%, 0% 100%);
+				clip-path: polygon(0 -1%, 100% 0, 100% 100%, 0% 100%);
+			}
 		}
-
-		}
-
 	}
 
 	.section_2 {
@@ -153,7 +166,7 @@
 	}
 
 	.section_3 {
-		padding:100px 0 100px 0;
+		padding: 100px 0 100px 0;
 
 		.l-wrap {
 			position: relative;
@@ -173,199 +186,23 @@
 		}
 	}
 
-	.bread_crumps{
-		text-align: left;
-		position: relative;
-		z-index: 150;
-		padding-top: 12px;
-		.txt{
-			width: 90%;
-			margin: 0 auto;
-			max-width: 1100px;
-			color: #fff;
-			font-family: yu-mincho-pr6n, sans-serif;
-			@include font-line(11);
-		}
-
-		span{
-			padding: 0 8px;
-		}
-	}
-
 	// clip top
 	.top-clip {
 		width: 800px;
 		height: 250px;
 		clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-		background: linear-gradient(to left, #2593d5, #2579bf);
+		background: linear-gradient(to right, #003782, #0059b6);
 		position: absolute;
-		top: -4.5%;
+		top: 0;
 		right: 0%;
+		margin-top: -115px;
 
 		@include is-sp {
-			width: 83%;
-			height: 161px;
-			top: -30px;
+			width: 77%;
+			height: 322px;
+			top: 0;
 		}
 	}
 
-	.csm--content-row {
-        display: flex;
-        flex-wrap: wrap;
-        width: 100%;
-        @include is-max(1000px) {
-            justify-content: space-between;
-        }
-        // justify-content: space-between;
-        .col {
-            width: 31.63265306122449%;
-            margin-bottom: 60px;
-            &:nth-child(3n + 2) {
-                margin: 0 2.5%;
-            }
-            @include is-max(1000px) {
-                width: 48%;
-                margin-bottom: 49px;
-                &:nth-child(3n + 2) {
-                    margin: 0 0 49px 0;
-                }
-                &:last-child {
-                    margin: 0;
-                }
-            }
-            @include is-sp {
-                width: 100%;
-            }
-        }
-    }
-
-	
-// case study main
-.csm {
-	.section_1__ttl {
-		@include is-sp {
-			@include font-line(12);
-		}
-	}
-
-	.c-case01__title {
-		line-height: 48px;
-		font-weight: 500;
-		@include is-sp {
-			@include font-line(25);
-			line-height: 32px;
-		}
-
-		@include is-max(340px) {
-			font-size: 7vw;
-		}
-	}
-
-	.c-case01__sub {
-		font-weight: 500;
-		line-height: 26px;
-		letter-spacing: 0.2em;
-		@include is-sp {
-			@include font-line(13.4);
-			letter-spacing: 0.1em;
-		}
-	}
-
-	.c-case--items__contents {
-		padding: 60px 0 0;
-
-		@include is-sp {
-			padding-bottom: 50px;
-		}
-	}
-
-	.c-case--items:nth-child(odd) {
-		clip-path: polygon(0 15%, 100% 0, 100% 100%, 0% 100%);
-
-		@include is-sp {
-			clip-path: polygon(0 6%, 100% 0, 100% 100%, 0% 100%);
-			padding-top: 76px;
-		}
-
-		.bg_2 {
-			top: 250px;
-
-			@include is-sp {
-				display: none;
-			}
-		}
-
-		.bg_3 {
-			top: 50px;
-
-			@include is-sp {
-				top: -9px;
-				width: 162px;
-				right: -9px;
-				display: block;
-			}
-		}
-
-		.bg_7 {
-			position: absolute;
-			bottom: 112px;
-			top: unset;
-			right: 10px;
-			z-index: -1;
-			width: auto !important;
-		}
-	}
-
-	.c-case--items:last-child {
-		&::after {
-			content: "";
-			width: 100%;
-			height: 4px;
-			background: #fff;
-			position: absolute;
-			left: 0;
-			right: 0;
-			bottom: -1px;
-			z-index: -10;
-		}
-	}
-
-	.c-case03__txt {
-		margin-bottom: 82px;
-
-		@include is-sp {
-			margin-bottom: 0;
-		}
-	}
-
-	.c-case03__txt__ttl {
-		font-weight: 500;
-		@include is-sp {
-			@include font-line(12);
-			letter-spacing: 0.15em;
-		}
-	}
-
-	.c-case03__txt__sub {
-		font-weight: 500;
-		@include is-sp {
-			@include font-line(25);
-			letter-spacing: 0.15em;
-		}
-	}
-
-	.c-case03__txt__desc {
-		font-weight: 500;
-		@include is-sp {
-			@include font-line(13.4);
-			letter-spacing: 0.1em;
-			line-height: 25px;
-		}
-
-		@include is-max(374px) {
-			font-size: 3.4vw;
-		}
-	}
- }
 
 }
